--- a/views/measurements.ejs
+++ b/views/measurements.ejs
@@ -3,8 +3,12 @@
       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
       <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart']});
-        google.charts.setOnLoadCallback(drawChart);
+        google.charts.setOnLoadCallback(initCHART);
 
+        function initCHART() {
+          drawChart();
+          setInterval(drawChart, 1000);
+        }
         function drawChart() {
           fetch('http://localhost:3001/api/measurements')
             .then((response) => { 
