--- a/views/measurements.ejs
+++ b/views/measurements.ejs
@@ -1,44 +1,43 @@
 <html>
-    <head>
-      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-      <script type="text/javascript">
-        google.charts.load('current', {'packages':['corechart']});
-        google.charts.setOnLoadCallback(initCHART);
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script  type="text/javascript">
+      google.charts.load('current', {'packages':['table']});
+      google.charts.setOnLoadCallback(init);
+    
+      function init() {
+        var socket = io();
+        console.log("initial")
+        socket.on('measdata', function (data) {
+          var s = JSON.parse(data);
+          console.log(s);
+          console.log("drawTable")
+          drawTable(s);
+        })
+      }
+      function drawTable(s) {
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'id');
+        data.addColumn('number', 'pressure');
+        data.addColumn('number', 'temperature');
+        data.addColumn('number', 'humidity');
+        console.log("draw row", s)
+        data.addRows(s);
+  
+        var options = {
+          title: 'Measurement data',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
 
-        function initCHART() {
-          drawChart();
-          setInterval(drawChart, 1000);
-        }
-        function drawChart() {
-          fetch('http://localhost:3001/api/measurements')
-            .then((response) => { 
-              return response.json();
-            })
-            .then(dataFromServer => {
-              var pressure_arr = dataFromServer;
-              console.log("Pressure", pressure_arr);
+        var table = new google.visualization.Table(document.getElementById('table_div'));
 
-              var data = new google.visualization.DataTable();
-              data.addColumn('number', 'id');
-              data.addColumn('number', 'field1');
-              data.addColumn('number', 'field2');
-              data.addColumn('number', 'field3');
-              
-              console.log("addtable", pressure_arr);
-              data.addRows(pressure_arr);
-
-              var options = {
-                title: 'Measurements',
-                curveType: 'function',
-                legend: { position: 'bottom' }
-              };
-              var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-              chart.draw(data, options);
-            });
-        }
-      </script>
-    </head>
-    <body>
-      <div id="curve_chart" style="width: 900px; height: 500px"></div>
-    </body>
-  </html>
+        table.draw(data, {showRowNumber: true, width: '100%', height: '100%'});
+      }
+    </script>
+  </head>
+  <body>
+    <div id="table_div"></div>
+  </body>
+</html>
